--- a/demo/index.html
+++ b/demo/index.html
@@ -5,10 +5,10 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>Interactive Storytelling | Codrops</title>
-	<meta name="description" content="An interactive journey where a Canvas map path is animated according to the content that is scrolled on the page. By Lucas Bebber." />
-	<meta name="keywords" content="svg map, animated, path, journey, story, article, canvas, images, plane, web design" />
-	<meta name="author" content="Lucas Bebber for Codrops" />
+	<title>Une aventure au Canada : De Vancouver à Calgary</title>
+	<meta name="description" content="Un voyage au Canada, de Vancouver à Calgary, par Adrien Bruyat, d'après Lucas Bebber." />
+	<meta name="keywords" content="Canada, Vancouver, Calgary, roadtrip" />
+	<meta name="author" content="Adrien Bruyat, d'après Lucas Bebber" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
