adding intro/abstract

--- a/demo/index.html
+++ b/demo/index.html
@@ -46,8 +46,18 @@
 			<!-- <p>
 				<blockquote><em>Broad, wholesome, charitable views of men and things cannot be acquired by vegetating in one little corner of the earth all of one’s lifetime.</em><span> &mdash; Mark Twain</span></blockquote>
 			</p> -->
-			<p class="text-intro">Notre voyage ne commence pas vraiment à Vancouvert. Il commence en réalité en 2016. L'idée à émergée avant la 6ème année de medecine d'Elodie.
-			</p>
+			<div class="abstract">
+				<p class="text-intro">
+					Notre voyage ne commence pas vraiment à Vancouvert. Il commence en réalité en 2016. L'idée à émergée avant la 6ème année de medecine d'Elodie.
+					</br>
+					L'organisation de celui-ci nous aura pris plus d'un an au total! Comme vous devez le savoir, nous sommes assez prévoyants... 
+				</p>
+				<p class="text-intro">
+					La perspective de ce voyage nous a aidé à passer le cap de cette année difficile pour nous deux (surtout pour Elodie).
+					</br>
+					Nous sommes très heureux que vous puissiez suivre avec nous cette aventure ! 
+				</p>
+			</div>
 			 <section class="js-section" data-stay="true" data-zoom-start="1.8"  data-zoom-middle="4">
 				<!-- <h2><span class="title-up">Vancouver</span><span class="title-down">The Adventure Begins</span></h2> -->
 			</section> 
