changing path and ico

--- a/canada/index.html
+++ b/canada/index.html
@@ -7,14 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Une aventure au Canada : De Vancouver à Calgary</title>
 	<meta name="description" content="Un voyage au Canada, de Vancouver à Calgary, par Adrien Bruyat, d'après Lucas Bebber." />
-	<meta name="keywords" content="Canada, Vancouver, Calgary, roadtrip" />
+	<meta name="keywords" content="Canada, Vancouver, Calgary, roadtrip, trip" />
 	<meta name="author" content="Adrien Bruyat, d'après Lucas Bebber" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	<!--[if IE]>
-	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
 </head>
 
 <body>
@@ -60,6 +57,7 @@
 			</div>
 			 <section class="js-section" data-stay="true" data-zoom-start="1.8"  data-zoom-middle="4">
 				<!-- <h2><span class="title-up">Vancouver</span><span class="title-down">The Adventure Begins</span></h2> -->
+				
 			</section> 
 
 			<section class="js-section" data-zoom-start="4" data-icon="img/ship.svg"  data-stay="true" >
