--- a/canada/index.html
+++ b/canada/index.html
@@ -54,6 +54,13 @@
 					</br>
 					Nous sommes très heureux que vous puissiez suivre avec nous cette aventure ! 
 				</p>
+
+				<figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/depart.jpeg" />
+					</div>
+					<figcaption>Les bagages sont prêts ! Départ ce soir à 17h!</figcaption>
+				</figure>
 			</div>
 			 <section class="js-section" data-stay="true" data-zoom-start="1.8"  data-zoom-middle="4">
 				<!-- <h2><span class="title-up">Vancouver</span><span class="title-down">The Adventure Begins</span></h2> -->
