--- a/canada/index.html
+++ b/canada/index.html
@@ -61,17 +61,95 @@
 					</div>
 					<figcaption>Les bagages sont prêts ! Départ ce soir à 17h!</figcaption>
 				</figure>
+
+				<h2><span class="title-up">Départ</span><span class="title-down">L'aventure commence !</span></h2> 
+				<p>
+					Un voyage de 30h nous attent pour aller jusqu'à Vancouver. Le décalage horaire là bas et de 9h (de moins qu'en France). 
+				</p>
+				<figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/Pass.jpg" />
+						<img src="img/journey/Flight1.jpeg" />
+						<img src="img/journey/Toronto.jpg" />
+						<img src="img/journey/Hamburger.jpg" />
+					</div>
+					<figcaption>C'est parti!</figcaption>
+				</figure>
+				<p>
+					Ca y est! Nous voilà parti pour le Canada! Nous montons dans l'avion surexcités malgrè les 8 heures de vol annoncées. Après de nombreuses turbulences, des bagages qui ont eu du mal à arriver (1h30 !), nous sommes enfin à Toronto.
+					</br>
+				</p>
+				<p>
+					5 heures plus tard nous y sommes enfin! L'aeroport de Vancouver est splandide et nous récupérons rapidement nos bagages cette fois. C'est avec joie que nous appelons la reception de notre hôtel qui nous envoie une navette. Il doit faire un peu moins de 20° dehors et l'air est l'odeur de l'océan est présente dans l'air. Celle-ci suffit à nous faire oublier notre fatigue le temps d'attendre la navette. Ca y est, nous y sommes, les vacances peuvent enfin commencer. 
+				</p>
+
+				<figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/o.jpg" />
+					</div>
+					<figcaption>Petite surprise dans notre hôtel!</figcaption>
+				</figure>
 			</div>
+
 			 <section class="js-section" data-stay="true" data-zoom-start="1.8"  data-zoom-middle="4">
-				<!-- <h2><span class="title-up">Vancouver</span><span class="title-down">The Adventure Begins</span></h2> -->
+				  <h2><span class="title-up">Vancouver</span><span class="title-down">Centre ville et Stanley Park</span></h2>
+				   <p class="text-intro">Pour cette première journée il fait très beau. Nous commencons par récupérer la voiture, un très gros SUV qui n'était pas notre commande initiale... Mais pas de problème, Adrien se sent déjà nord américain ! </p> 
+				<p>
+					Aujourd'hui nous avons visité le quartier de Gastown, Waterfront, Stanley park (en vélo !) ainsi que Chinatown.
+				</p>
+				 <figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/PANO_20170823_111231.jpg" />
+					</div>
+				</figure> 
+				<p>
+					Nous commencons par visiter Gastown qui est le plus vieux quartier de la ville. Celui-ci est assez typique avec ses maisons en briques.
+				</p>
+				<figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/IMG_20170823_103038.jpg" />
+					</div>
+					<figcaption>L'horloge à vapeur</figcaption>
+				</figure> 
+
+				<p>
+					Notre visite se poursuit avec Stanley park et son aquarium (qui est absolument magnifique).
+				</p>
+
+				<figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/IMG_20170823_112621.jpg" />
+						<img src="img/journey/IMG_20170823_122132.jpg" />
+						<img src="img/journey/IMG_20170823_153239.jpg" />
+
+						<img src="img/journey/Otter.jpg" />
+						<img src="img/journey/P1060908.JPG" />
+
+						<img src="img/journey/P1060889.JPG" />
+					</div>
+					<figcaption>Des loutres de mer !!!</figcaption>
+				</figure> 
+
+				<p>
+					Puis nous avons fini la journée par une visite de Chinatown.
+				</p>
+
+				<figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/chinatown2.jpg" />
+						<img src="img/journey/adrien2.jpg" />
+					</div>
+				</figure> 
+				<p>
+					Pour le plus grand bonheur d'Adrien, il y a des coffee shop partout et en plus ils sont tres bons!.
+				</p>
+			</section>
+
+			<section class="js-section" data-zoom-start="4" data-icon="img/ship.svg"  data-stay="true" >
 				
 			</section> 
 
-			<section class="js-section" data-zoom-start="4" data-icon="img/ship.svg"  data-stay="true" >
-				<!-- <h2><span class="title-up">Vancouver</span><span class="title-down">The Adventure Begins</span></h2> -->
-			</section> 
-
-			<section class="js-section" data-zoom-start="4" >
+			<section class="js-section" data-zoom-start="4" data-stay="true">
 				<!-- <h2><span class="title-up">Victoria</span><span class="title-down">The Adventure Begins</span></h2> -->
 			</section>   
 
