adding missing text

--- a/canada/index.html
+++ b/canada/index.html
@@ -141,7 +141,8 @@
 					</div>
 				</figure> 
 				<p>
-					Pour le plus grand bonheur d'Adrien, il y a des coffee shop partout et en plus ils sont tres bons!.
+					Pour le plus grand bonheur d'Adrien, il y a des coffee shop partout et en plus ils sont tres bons!
+					Petit malus, nous avons pris une amende parce que nous nous sommes garé dans le mauvais sens de la route...
 				</p>
 			</section>
 
