--- a/canada/index.html
+++ b/canada/index.html
@@ -92,7 +92,7 @@
 			</div>
 
 			 <section class="js-section" data-stay="true" data-zoom-start="1.8"  data-zoom-middle="4">
-				  <h2><span class="title-up">Vancouver</span><span class="title-down">Centre ville et Stanley Park</span></h2>
+				  <h2><span class="title-up">Vancouver</span><span class="title-down">J1 : Centre ville et Stanley Park</span></h2>
 				   <p class="text-intro">Pour cette première journée il fait très beau. Nous commencons par récupérer la voiture, un très gros SUV qui n'était pas notre commande initiale... Mais pas de problème, Adrien se sent déjà nord américain ! </p> 
 				<p>
 					Aujourd'hui nous avons visité le quartier de Gastown, Waterfront, Stanley park (en vélo !) ainsi que Chinatown.
@@ -143,6 +143,47 @@
 				<p>
 					Pour le plus grand bonheur d'Adrien, il y a des coffee shop partout et en plus ils sont tres bons!
 					Petit malus, nous avons pris une amende parce que nous nous sommes garé dans le mauvais sens de la route...
+				</p>
+				
+				<h2><span class="title-down">J2 : Museum of Anthropology (MOA) et Granville Island</span></h2>
+				<p>
+					Après une bonne nuit de sommeil, nous sommes bien décidé à attaquer la journée par un vrai petit déjeuner canadien : les Pancakes! Nous n'avons pas été deçu...
+				</p>
+				<figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/20170824_093912.jpg" />
+					</div>
+					<figcaption>Les Pancakes de chez Jethro's Fine Grub ! </br>On a eu droit au doggy bag...</figcaption>
+				</figure> 
+				<p>
+					Nous avons continué la journée par la visite du MOA qui est centré sur la culture amérindienne et particulièrement celle des alentours de Vancouver et la tribu des Haida.
+				</p>
+
+				<figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/IMG_20170824_105554.jpg" />
+						<img src="img/journey/20170824_105314.jpg" />
+						<img src="img/journey/20170824_105443.jpg" />
+					</div>
+					<figcaption>Quelques troncs sculptés et localisation des tribus</figcaption>
+				</figure>
+
+				<p>
+					Direction le quartier de Granville Island ! C'est un ancien chantier/port maritime qui est aujourd'hui le coin des artistes et des hipsters !
+					</br>Galleries, ateliers d'artistes, brasseurs de bières, petits torréfacteurs. L'attraction de la preque-île est le Public Market, une sorte de grande halle avec de nombreuses étales et des petits restaurant. Très cosmopolite !
+				</p>
+				<figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/20170824_135133.jpg" />
+						<img src="img/journey/IMG_20170824_150644.jpg" />
+						<img src="img/journey/IMG_20170824_180946_844.jpg" />
+						<img src="img/journey/20170824_144110.jpg" />
+						<img src="img/journey/20170824_144333.jpg" />
+						
+					</div>
+				</figure>
+				<p>
+					La soirée sera calme, repos avant d'attaquer l'île de Vancouver!
 				</p>
 			</section>
 
