--- a/canada/index.html
+++ b/canada/index.html
@@ -188,7 +188,58 @@
 			</section>
 
 			<section class="js-section" data-zoom-start="4" data-icon="img/ship.svg"  data-stay="true" >
-				
+				 <h2><span class="title-up">Victoria</span><span class="title-down">J3 : Victoria</span></h2> 
+				 <p>
+					Nous quittons la cité de Vancouver pour aller sur l'île du même nom! Nous allons rester 7 jours sur cette île qui fait plus de 450 km de long et à titre de comparaison, est plus grande que la belgique ! Nous esperons bieen voir des ours noirs, des orques, des dauphins et toutes sortes de mammifères et oiseaux !
+					</br> En route pour Victoria!
+				</p>
+				<figure>
+					<img class="js-image" data-pos="0.1" src="img/journey/20170825_130915.jpg" />
+					<img class="js-image" data-pos="0.3" src="img/journey/20170825_122339.jpg" />
+					<img class="js-image" data-pos="0.4" src="img/journey/20170825_122401.jpg" />
+					<img class="js-image" data-pos="0.5" src="img/journey/20170825_124959.jpg" />
+					<img class="js-image" data-pos="0.6" src="img/journey/20170825_115229.jpg" />
+					<img class="js-image" data-pos="0.8" src="img/journey/20170825_124351.jpg" />
+					<figcaption>Nous avons eu la chance de voir des dauphins! </figcaption>
+				</figure>
+
+				<p>
+					Arrivé en début d'après midi, nous avons passé le reste de la journée à Victoria. Ses batiments de style victorien, son ancien village de pecheur flottant et ses boutiques hipster donnent beaucoup de charmes à cette ville.
+				</p>
+
+				<figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/IMG_20170825_151116.jpg" />
+						<img src="img/journey/P1060932.JPG" />
+						<img src="img/journey/P1060936.JPG" />
+						<img src="img/journey/P1060937.JPG" />
+						<img src="img/journey/P1060941.JPG" />
+						<img src="img/journey/P1060942.JPG" />
+						<img src="img/journey/P1060944.JPG" />
+					</div>
+					<figcaption>The Fairmont Empress, probablement l'un des meilleur lieu de toutes la Colombie Britanique pour prendre le thé ! Dommage qu'Elodie n'aime pas ça ! </figcaption>
+				</figure>
+				<figure>
+					<div class="js-gallery-content">
+						
+
+						<img src="img/journey/P1060946.JPG" />
+						<img src="img/journey/P1060954.JPG" />
+						<img src="img/journey/P1060956.JPG" />
+					</div>
+					<figcaption>Le Parlement de Colombie-Britanniqu</figcaption>
+				</figure>
+				<figure>
+					<div class="js-gallery-content">
+						<img src="img/journey/P1060960.JPG" />
+
+						<img src="img/journey/PANO_20170825_153602.jpg" />
+					</div>
+				</figure>
+
+				<p>
+					La journée se termine par un bon restaurant et dégustons de délicieux vin du coin (car oui, il y en a!)
+				</p>
 			</section> 
 
 			<section class="js-section" data-zoom-start="4" data-stay="true">
