--- a/canada/index.html
+++ b/canada/index.html
@@ -405,7 +405,7 @@
 			<section class="js-section" data-stay="true" data-zoom-middle="3" data-zoom-start="2">
 				 <h2><span class="title-up">Port Hardy</span></h2> 
 				<p>
-					Pas grand choses à faire à Port Hardy, c'est un point de passage uniquement. Nous commençons à nous éloigner des grandes ville ce cela se connait! Un panneau nous indique qu'il n'y a pas de station essence avant plus de 200 km...Les radios se font rares et passent beaucoup de musiques country!
+					Pas grand choses à faire à Port Hardy, c'est un point de passage uniquement. Nous commençons à nous éloigner des grandes ville et cela se voit! Un panneau nous indique qu'il n'y a pas de station essence avant plus de 200 km...Les radios se font rares et passent beaucoup de musiques country!
 					</br>
 					Nous profitons de la route et des paysages qui sont magnifique. 
 				</p>
@@ -450,10 +450,10 @@
 					<figcaption></figcaption>
 				</figure>
 				<p>
-					Les rumeurs sont vraies! Il y a des ours et ceux-ci traversent la route sans regarder à n'importe où et n'importe quand!
+					Les rumeurs sont vraies! Il y a des ours et ceux-ci traversent la route sans regarder n'importe où et n'importe quand!
 				</p>
 				<p>
-					Après avoir vu tant de rivières et tant de saumons, Adrien pour confirmer qu'il s'agit bien là d'une des plus belle region du monde pour la pêche (à la mouche) et qu'il devra certainement revenir pour en profiter pleinement!
+					Après avoir vu tant de rivières et tant de saumons, Adrien peut confirmer qu'il s'agit bien là d'une des plus belle region du monde pour la pêche (à la mouche) et qu'il devra certainement revenir pour en profiter pleinement!
 				</p>
 				
 			</section>
@@ -461,7 +461,9 @@
 			<section data-stay="true" class="js-section" data-zoom-start="3">
 				<h2><span class="title-up">Smithers</span><span class="title-down">Les reserves indiennes</span></h2>
 				<p>
-					Nous continuons notre chemin par la visite de nombreuses reserves indiennes et de groupement de totems. Ceux-ci sont impressionnant par leur hauteur! Un totem est consitué d'un seul et unique tronc d'arbre est représente l'histoire d'une famille. Les natifs n'ayant une langue écrite que depuis une vingtaine d'années, L'histoire et les traditions étaient transmissent à travers ces totems.  
+					Nous continuons notre chemin par la visite de nombreuses reserves indiennes et groupements de totems. Ceux-ci sont impressionnant par leur hauteur!
+					Un totem est consitué d'un seul et unique tronc d'arbre est représente l'histoire d'une famille. Les natifs n'ayant une langue écrite que depuis une vingtaine
+					 d'années, L'histoire et les traditions étaient transmisent à travers ces totems.  
 				</p>
 				<figure>      
 					<div class="js-gallery-content">
