correction on html

--- a/canada/index.html
+++ b/canada/index.html
@@ -599,7 +599,7 @@
 						<img src="img/journey/IMG_20170916_151037_HDR.jpg" />
 						<img src="img/journey/IMG_20170916_181713_HDR.jpg" />
 						<img src="img/journey/IMG_20170917_095333_HDR.jpg" />
-						<img src="img/journey/IMG_20170917_115123_HDR-01.jeg" />
+						<img src="img/journey/IMG_20170917_115123_HDR-01.jpg" />
 						<img src="img/journey/IMG_20170917_115522_HDR.jpg" />
 						<img src="img/journey/IMG_20170917_115536_HDR.jpg" />
 						<img src="img/journey/IMG_20170917_120529_HDR-01.jpg" />
