--- a/canada/index.html
+++ b/canada/index.html
@@ -640,7 +640,7 @@
 		</section>
 	</div>
 	<!-- /main -->
-	<script src="../dist/app.js"></script>
+	<script src="./app.js"></script>
 </body>
 
 </html>
